--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 <body>
 
     <div class="container">
-        <h2>welcome</h2>
+        <h2>Hello There</h2>
         <textarea id="msg-input" placeholder="type..."></textarea>
-        <button id="transmit-btn">SEND</button>
+        <button id="transmit-btn">MESSAGE</button>
         <div id="status"></div>
     </div>
 
